--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,6 +1,6 @@
 ************************
 *** Vxxxx
-*** New solvers : stationaryGroundwater2DFoam
+*** New solver : stationaryGroundwater2DFoam
 ************************
 
 ### Solvers
@@ -13,7 +13,8 @@
 
 - stationaryGroundwater2DFoam
 
-  - "stationary" version of groundwater2DFoam  
+  - "stationary" version of groundwater2DFoam
+  - fixedPotentialList added in 
 
 ### Tutorials
 
@@ -24,6 +25,14 @@
 - groundwater2DFoam
 
   - updated to be similar to the stationary case
+
+### Libraries
+
+- toolsGIS
+
+  - new library containing classes for GIS manipulation
+  - first class is MNT file used to read xyz file and performed
+    bilinear interpolation.
 
 ************************
 *** V1809
