timestep in scalar transport controlled by Courant No

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -22,6 +22,7 @@
 
   - water content (theta) can be given instead of saturation (Sphase) to allow
   the direct use of pre-computed stationaryGroundwaterFoam computations.
+  - timestep is now controlled by porous- Courant number
 
 ### Libraries
 
