renaming event boundary conditions

--- a/tutorials/porousScalarTransportFoam-tutorials/1DeventFlux/0/C.org
+++ b/tutorials/porousScalarTransportFoam-tutorials/1DeventFlux/0/C.org
@@ -23,8 +23,9 @@ boundaryField
 {
     top
     {
-        type           fixedFlux;
-        fixedFluxValue -1e-8;
+        type           eventFlux;
+        constantValue  -1e-8;
+        eventFile      "patchInjection.dat";
         phiName        phitheta;
         value          uniform 0;
     }
