--- a/tutorials/porousScalarTransportFoam-tutorials/1DeventFlux_CrankNicolson/0/C.org
+++ b/tutorials/porousScalarTransportFoam-tutorials/1DeventFlux_CrankNicolson/0/C.org
@@ -9,49 +9,36 @@ FoamFile
 {
     version     2.0;
     format      ascii;
-    class       dictionary;
-    location    "system";
-    object      controlDict;
+    class       volScalarField;
+    location    "0";
+    object      C;
 }
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
-application     porousScalarTransport2DFoam;
+dimensions      [1 -3 0 0 0 0 0];
 
-startFrom       startTime;
+internalField   uniform 0;
 
-startTime       0;
+boundaryField
+{
+    top
+    {
+        type           eventFlux;
+        constantValue  -1e-8;
+        eventFile      "patchInjection.dat";
+        phiName        phitheta;
+        value          uniform 0.31746;
+    }
 
-stopAt          endTime;
+    bottom
+    {
+        type            zeroGradient;
+    }
 
-endTime         864000;
+    frontAndBack
+    {
+        type            empty;
+    }
+}
 
-deltaT          1;
-
-writeControl    adjustableRunTime;
-
-writeInterval   72000;
-
-purgeWrite      0;
-
-writeFormat     ascii;
-
-writePrecision  6;
-
-writeCompression uncompressed;
-
-timeFormat      general;
-
-timePrecision   6;
-
-adjustTimeStep yes;
-
-runTimeModifiable true;
-
-truncationError 0.001;
-
-maxDeltaT       1e8;
-
-CSVoutput       true;
-
-eventTimeTracking true;
 // ************************************************************************* //
