truncationError_C/_potential/_h added

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -22,6 +22,9 @@
   is solver using Newton method until the Newton tolerance.
   - the equations residual is now signed and under-relaxation occurs only when
   residual increases without changing sign
+  - timestep is managed using time scheme for truncation error. Only the Euler
+  timescheme is currently handled for the pressure head equation but 2nd order
+  schemes can be used for C equation (see tutorials)
 
 ### Libraries
 
