fix 2D CmassBalance computation

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -47,6 +47,7 @@
 - 3rd time derivative computed on potential (instead of hwater) to avoid
 instabilities when hwater tends to 0
 - fix retard coefficient for unsaturated (depends on saturation flow)
+- fix flow/balance computation in 2D solvers
 - handle correctly dry cells for stationaryGroundwater2DFoam solver
 
 ************************
