--- a/README
+++ b/README
@@ -6,6 +6,8 @@
 
 - The current branches (last version of the toolbox)
 
+  - branch "openfoam-v8"    > PMFv1912
+  - branch "openfoam-v2006" > PMFv1912
   - branch "openfoam-v1906" > PMFv1912
   - branch "openfoam-v7"    > PMFv1912
 
