--- a/tutorials/porousScalarTransportFoam-tutorials/1DeventFlux_CrankNicolson/0/C.org
+++ b/tutorials/porousScalarTransportFoam-tutorials/1DeventFlux_CrankNicolson/0/C.org
@@ -25,7 +25,7 @@ boundaryField
     {
         type           eventFlux;
         constantValue  -1e-8;
-        eventFile      "patchInjection.dat";
+        eventFile      "patchInjection.evt";
         phiName        phitheta;
         value          uniform 0.31746;
     }
