--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -4,6 +4,16 @@
 - MNT (Modèle Numérique de Terrain) has been replaced by DEM (Digital
   Elevation Model) for file name, field name, comments...
 
+### Solvers
+
+- dispersive terms for transport solvers have been fixed with:
+
+  fvc::(eps * saturation * Deff, C)
+
+  replaced by:
+
+  eps * saturation * fvc::(Deff, C)
+
 ### Tools
 
 - new folder containing external tools (python/bash scripts) for the toolbox
