--- a/README
+++ b/README
@@ -4,6 +4,8 @@
 
 * General Informations
 
+- branch dev works with OpenFOAM-v2106
+
 - The current branches (last version of the toolbox)
 
   - branch "openfoam-v2106" > PMFv2107
@@ -32,7 +34,7 @@
   - OpenFOAM 2.4 and older
   - foam-extend 3.2 and older
   - OpenFOAM v1706 and older
-  - OpenFOAM v1712/v1812/v1912/v2012
+  - OpenFOAM v1812/v1912/v2012
 
 - This toolbox needs only a standard OpenFOAM installation
   (see www.openfoam.org or openfoam.com)
