PMFv2310: minor changes

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,10 +1,19 @@
+************************
+*** PMF v2310
+*** Minor fixes and compatibility
+************************
 
-
-### Compatibility / Minor changes
+### Compatibility
 
 - fix partial compatibility for Clang and v2212
 
+### Minor changes
+
 - rename libraries to PMFXXXX.so
+
+- fix keyword for output event in groundwaterTransportFoam
+
+- remove non-working mapFieldsFrom2D folder
 
 ************************
 *** PMF v2303
