BUG: fix parallel efficiency for CSV outputs

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -47,6 +47,8 @@
 
 - fix CmassBalance computation for porousScalarTransportFoam
 
+- fix parallel efficiency with CSV file outputs
+
 ************************
 *** PMF v2310
 *** Minor fixes and compatibility
